@@ -50,5 +50,10 @@ string Stopped::do_stateName() const {
 }
 
 void Stopped::do_moveToFailedState(xcept::Exception& exception) const {
-	// handled by super-state
+	SharedResourcesPtr_t res = outermost_context().getSharedResources();
+	res->reasonForFailed_ = exception.what();
+	LOG4CPLUS_FATAL(res->log_,
+			"Moving to FAILED state! Reason: " << exception.what());
+	EventPtr fail(new Fail());
+	res->commands_.enqEvent(fail);
 }
